option('alsa', type: 'feature', value: 'auto', description: 'ALSA support')
option('autostart-method', type: 'string', value: 'classic', description: 'Set client autostart method (classic or dbus)')
option('celt', type: 'feature', value: 'auto', description: 'Celt support (legacy)')
option('dbus', type: 'feature', value: 'auto', description: 'D-Bus support')
option('ffado', type: 'feature', value: 'auto', description: 'FFADO support')
option('iio', type: 'feature', value: 'auto', description: 'IIO support')
option('oss', type: 'feature', value: 'auto', description: 'OSS support')
option('portaudio', type: 'feature', value: 'auto', description: 'PortAudio support')
option('systemd', type: 'feature', value: 'auto', description: 'Systemd integration')
option('winmme', type: 'feature', value: 'auto', description: 'WinMME support')
option('doxygen', type: 'feature', value: 'auto', description: 'Documentation')
